# vallox_websocket_api

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: coverage.yml  python-package.yml  python-publish.yml  python-test.yml  test.yml
tests/: conftest.py  decorators.py  test_client.py  test_fetch_logs.py  test_messages.py  test_set_temperature.py  test_vallox_alarm.py  test_vallox_fan_speed.py  test_vallox_filter_change.py  test_vallox_info.py  test_vallox_next_filter_change.py  test_vallox_profile.py  test_vallox_sensors.py  test_vallox_temperatures.py
tests/data/: test_data_model.py
tests/data/js/: 2.0.16.bundle.js  2.0.2.bundle.js  2.0.22.bundle.js  2.0.24.bundle.js  3.1.0.bundle.js  helios-kwl-bundle.js  vallox.js
vallox_websocket_api/: __init__.py  client.py  constants.py  exceptions.py  messages.py  vallox.py
vallox_websocket_api/data/: 2.0.16.json  2.0.22.json  buffer_ranges.py  constants.py  model.py
