[metadata]
name = vallox_websocket_api
version = attr: vallox_websocket_api.__version__
author = Jevgeni Kiski
author_email = yozik04@gmail.com
description = Vallox WebSocket API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vallox api
url = https://github.com/yozik04/vallox_websocket_api
project_urls =
    Bug Tracker = https://github.com/yozik04/vallox_websocket_api/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = LGPL 3

[options]
zip_safe = True
include_package_data = True
packages =
    vallox_websocket_api
python_requires = >=3.6.0, <4
install_requires =
    websockets >= 9.1, < 11.0
    construct >= 2.9.0, < 3.0.0
tests_require =
    pytest
    pytest-asyncio

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E128 continuation line under-indented for visual indent
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    E128
noqa-require-code = True

[coverage:report]
show_missing = true
